--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
     </div>
     <div id="resume-area">
       <div id="resume-text">
-        <a href="img_avatar.jpg" download
+        <a href="Resume - Alejandro Montalvo.pdf" download
           ><ion-icon id="resume-download" name="download-outline"></ion-icon
         ></a>
         <h1>Alejandro Montalvo</h1>
