--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <form
       class="contact-form"
       accept-charset="utf-8"
-      action="https://formsubmit.co/amontalvowps@gmail.com"
+      action="https://formsubmit.co/alejandrormont@gmail.com"
       method="POST"
     >
       <label for="name">Full Name<a style="color: red">*</a></label
